--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Virtual Crime Escape Room</title>
+    <title>Virtual Birthday Escape Room</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 
@@ -47,7 +47,7 @@
     <div class="container">
         <h2>A Crime Has Been Committed!</h2>
         <img src="https://source.unsplash.com/300x200/?crime,detective" alt="Crime Scene" class="image">
-        <p>You are a detective investigating a mysterious case. A locked box contains the next vital clue. Solve the riddle and enter the correct code to unlock it.</p>
+        <p>You are a detective investigating your own birthday case. A locked box contains the next vital clue. Could you solve the riddle and enter the correct code to unlock it? </p>
         
         <img src="https://source.unsplash.com/300x200/?lockbox,mystery" alt="Lockbox" class="image">
 
