--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virtual Birthday Escape Room</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
-
         body {
-            font-family: 'Special Elite', cursive;
+            font-family: "Courier New", monospace; /* Newspaper-style font that works everywhere */
             background-color: #001f3f;
             color: white;
             text-align: center;
@@ -46,10 +44,10 @@
 
     <div class="container">
         <h2>A Crime Has Been Committed!</h2>
-        <img src="https://source.unsplash.com/300x200/?crime,detective" alt="Crime Scene" class="image">
-        <p>You are a detective investigating your own birthday case. A locked box contains the next vital clue. Could you solve the riddle and enter the correct code to unlock it? </p>
+        <img src="https://raw.githubusercontent.com/octocat/Spoon-Knife/master/imgs/octocat.png" alt="Crime Scene" class="image">
+        <p>You are a detective investigating your birthday case. A locked box contains the next vital clue. Could you solve the riddle and enter the correct code to unlock it?</p>
         
-        <img src="https://source.unsplash.com/300x200/?lockbox,mystery" alt="Lockbox" class="image">
+        <img src="https://raw.githubusercontent.com/octocat/Spoon-Knife/master/imgs/octocat.png" alt="Lockbox" class="image">
 
         <p><strong>Hint:</strong> The number you seek might be someone’s date of birth… but whose? Look around for clues.</p>
         
@@ -61,7 +59,7 @@
             <p>Now you have scanned me once, so you shall see,<br>
             A hint that leads to plants and trees.<br>
             Near the greens, where knowledge grows,<br>
-            A board stands tall—what it shows?<br>
+            A board stands tall—what does it show?<br>
             Rare ones listed, unique and neat.<br>
             Find your next clue where nature meets!</p>
         </div>
