--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <h2>A Crime Has Been Committed!</h2>
         <img src="https://raw.githubusercontent.com/octocat/Spoon-Knife/master/imgs/octocat.png" alt="Crime Scene" class="image">
-        <p>You are a detective investigating your birthday case. A locked box contains the next vital clue. Could you solve the riddle and enter the correct code to unlock it?</p>
+        <p>You are a great detective investigating your birthday case. A locked box contains the next vital clue. Could you solve the riddle and enter the correct code to unlock it?</p>
         
         <img src="https://raw.githubusercontent.com/octocat/Spoon-Knife/master/imgs/octocat.png" alt="Lockbox" class="image">
 
