--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
     <div class="container">
         <h2>A Crime Has Been Committed!</h2>
-        <img src="https://raw.githubusercontent.com/octocat/Spoon-Knife/master/imgs/octocat.png" alt="Crime Scene" class="image">
+        <img src="https://img.freepik.com/premium-photo/happy-birthday-with-mystery-dinner-theater_1170794-449887.jpg" alt="Crime Scene" class="image">
         <p>You are a great detective investigating your birthday case. A locked box contains the next vital clue. Could you solve the riddle and enter the correct code to unlock it?</p>
         
-        <img src="https://raw.githubusercontent.com/octocat/Spoon-Knife/master/imgs/octocat.png" alt="Lockbox" class="image">
+        <img src="https://img.freepik.com/premium-psd/padlock-isolated-transparent-background-png-psd_888962-889.jpg" alt="Lockbox" class="image">
 
         <p><strong>Hint:</strong> The number you seek might be someone’s date of birth… but whose? Look around for clues.</p>
         
