Update new wow index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="https://img.freepik.com/premium-photo/happy-birthday-with-mystery-dinner-theater_1170794-449887.jpg" alt="Crime Scene" class="image">
         <p>You are a great detective investigating your birthday case. A locked box contains the next vital clue. Could you solve the riddle and enter the correct code to unlock it?</p>
         
-        <img src="https://media.istockphoto.com/id/908356480/photo/safe-lock-with-padlock-sign-security-concept-background.jpg?s=612x612&w=0&k=20&c=OiOT6k5zRWkRqQtnc0rXZr9AldC9xslMaoVGRC5gEX0=" alt="Lockbox" class="image">
+        <img src="https://media.istockphoto.com/id/523471534/photo/safe-combination-lock.jpg" alt="numberlock" class="image">
 
         <p><strong>Hint:</strong> The number you seek might be someone’s date of birth… but whose? Look around for clues.</p>
         
