--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="https://img.freepik.com/premium-photo/happy-birthday-with-mystery-dinner-theater_1170794-449887.jpg" alt="Crime Scene" class="image">
         <p>You are a great detective investigating your birthday case. A locked box contains the next vital clue. Could you solve the riddle and enter the correct code to unlock it?</p>
         
-        <img src="https://png.pngtree.com/png-vector/20200201/ourmid/pngtree-combination-lock-realistic-metal-vector-png-image_2136914.jpg" alt="numberlock" class="image">
+        <img src="https://png.pngtree.com/png-vector/20200201/ourmid/pngtree-combination-lock-realistic-metal-vector-png-image_2136914.jpg" class="image">
 
         <p><strong>Hint:</strong> The number you seek might be someone’s date of birth… but whose? Look around for clues.</p>
         
